# JAS

./: .gitmodules  BasicKey.qml  CMakeLists.txt  DynamicOrgan.qml  IconButton.qml  Keyboard.qml  ModeSelector.qml  PlaybackControl.qml  README.md  RecordingSlicer.qml  SineOrgan.qml  SquareOrgan.qml  TriangleOrgan.qml  adsr.cpp  adsr.h  audiorecording.cpp  audiorecording.h  constant.cpp  constant.h  darken.frag  decay.cpp  decay.h  decaySine.qml  decaySquare.qml  decayTriangle.qml  delay.cpp  delay.h  effect.cpp  generator.cpp  generator.h  jass.h  jassplayer.cpp  main.cpp  main.qml  mixer.cpp  mixer.h  organ.cpp  organ.h  oscillator.cpp  oscillator.h  (+29 more)
JASSCore/: CMakeLists.txt  amplifier.cpp  amplifier.h  audiorecording.cpp  constant.cpp  constant.h  decay.h  delay.cpp  delay.h  effect.cpp  effect.h  exponential.cpp  exponential.h  jassplayer.cpp  jassplayer.h  karplusstrong.cpp  karplusstrong.h  mixer.cpp  mixer.h  oscillator.cpp  oscillator.h  patchboard.cpp  patchboard.h  piecewisefunction.cpp  piecewisefunction.h  piecewisepoint.cpp  piecewisepoint.h  pwloscillator.cpp  pwloscillator.h  sineoscillator.cpp  sineoscillator.h  sinevco.cpp  source.cpp  source.h  squareoscillator.cpp  squareoscillator.h  squarevco.cpp  triangleoscillator.cpp  triangleoscillator.h  trianglevco.cpp  (+4 more)
JASSDemo/: CMakeLists.txt  DemoDelegate.qml  DemoModel.qml  Main.qml  MiteredRectangle.qml  RunButton.qml  borderblur.frag  convole.frag  glow.frag  glow.vert  main.cpp  main.qml  notes.js  resources.qrc
JASSDemo/Basic/: CMakeLists.txt  DecaySine.qml  DecaySquare.qml  DecayTriangle.qml  DynamicOrgan.qml  ModeSelector.qml  PlaybackControl.qml  StrangeReed.qml  TestBed.qml  main.qml
JASSDemo/Piano/: Blackkey.qml  CMakeLists.txt  Colors.qml  Halo.qml  Keyboard.qml  SoundEditor.qml  SynthSound.qml  Whitekey.qml  main.qml  textfile.cpp  textfile.h
JASSDemo/SoundLibrary/: CMakeLists.txt  SoundCard.qml  SoundModel.qml  SquareGenerator.qml  main.qml
JASSDemo/SourceLibrary/: CMakeLists.txt  CardGraph.qml  FitButton.qml  LibraryCard.qml  LibraryModel.qml  Main.qml  ParameterControl.qml  SpinBox.qml
JASSDemo/android/: gradle.properties
JASSDemo/android/src/org/skrywerbeer/: MainActivity.java
JASSDemos/: CMakeLists.txt  WhiteKey.qml  darken.frag  main.cpp
JASSDemos/Basic/: DynamicOrgan.qml  Keyboard.qml  PlaybackControl.qml  main.qml
JASSDemos/Piano/: BlackKey.qml
JASSView/: CMakeLists.txt  axis.cpp  axis.h  axisnode.cpp  axisnode.h  axisticks.cpp  axisticks.h  interval.cpp  interval.h  linegraph.cpp  linegraph.h  linesegmentnode.cpp  linesegmentnode.h  padding.cpp  padding.h  plot.cpp  plot.h  plotnode.cpp  plotnode.h  recordinggraph.h
android/: AndroidManifest.xml
